# SentinelAI

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  OVERVIEW.md  PRD.md  README.md  docker-compose.yml  id_ed25519  id_ed25519.pub  info.txt  package-lock.json  package.json
backend/: .env.example  agents.db  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: analytics.py  escalation_handler.py  guardrails.py  negotiation.py  orchestrator.py  predictive_prevention.py  queue_balancer.py  skill_router.py
backend/app/api/: websocket.py
backend/app/api/routes/: agent_chat.py  agents.py  alerts.py  auth.py  chat.py  governance.py  health.py  history.py  notifications.py  queues.py  reports.py  simulation.py  teams.py
backend/app/models/: __init__.py  action.py  agent.py  alert.py  guardrails.py  proficiency.py  queue.py
backend/app/services/: agent_database.py  anomaly.py  bedrock.py  chat_tools.py  connect.py  notifications.py  pdf_report.py  raia_tracer.py  redis_client.py  sanitizer.py  simulation.py  teams_bot.py
backend/tests/: test_health.py
backend/trace-sdk/: README.md  pyproject.toml
backend/trace-sdk/raia_sdk/: __init__.py  auth.py  config.py  context.py  decorators.py  trace.py  uploader.py
backend/trace-sdk/raia_sdk/integrations/: __init__.py  langgraph.py
docs/: ARCHITECTURE.md  BACKLOG.md  COMPETITIVE_ANALYSIS.md  CONTEXT.md  INDEX.md  STATUS.md  TASKS.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
(+52 files in other folders)
