[project]
name = "sentinelai-backend"
version = "0.1.0"
description = "SentinelAI — Autonomous AI Operations Layer for AWS Connect"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
