[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raia-sdk"
version = "0.1.0"
description = "RAIA Trace SDK - Responsible AI Assessment trace logging for Agentic AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "isort",
]

[tool.setuptools.packages.find]
include = ["raia_sdk*"]
